...
    val label: String
)

@Composable
fun BottomNavigationBar(navController: NavHostController) {
    val items = listOf(
        NavigationItem(AppRoute.Home, Icons.Outlined.Home, "Inicio"),
        NavigationItem(AppRoute.Offers, Icons.Outlined.LocalOffer, "Ofertas"),
        NavigationItem(AppRoute.Order, Icons.Outlined.ShoppingCart, "Ordenar"),
        NavigationItem(AppRoute.Products, Icons.Outlined.Inventory2, "Productos"),
        NavigationItem(AppRoute.User, Icons.Outlined.Person, "Usuario")
    )
    
    NavigationBar(
        containerColor = Color.White,
        tonalElevation = 0.dp
    ) {
...
