...
                        )
                    )
                    .padding(24.dp)
            ) {
                Column {
                    Text(
                        text = "Método de Entrega",
                        fontSize = 28.sp,
                        fontWeight = FontWeight.Bold
                    )
                    Text(
                        text = "Elige cómo recibir tu pedido",
                        color = Color.Gray,
...
